--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7211702c",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0ad1c2f5",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "d104c504",
    "metadata": {},
    "outputs": [],
@@ -1846,6 +1846,186 @@
     "]\n",
     "\n",
     "model_v3 = model.fit(train_ds, epochs=50, validation_data=val_ds, callbacks=callbacks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efe9a9f4",
+   "metadata": {},
+   "source": [
+    "## Загрузка модели"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9683d93c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_model = keras.models.load_model('xception_v336_0.850.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6a096173",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 372 images belonging to 10 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_gen = ImageDataGenerator(\n",
+    "    preprocessing_function = preprocess_input\n",
+    ")\n",
+    "test_ds = test_gen.flow_from_directory(\n",
+    "    \"clothing-dataset-small/test\",\n",
+    "    target_size=(150,150),\n",
+    "    batch_size=32\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b1414023",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m12/12\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 768ms/step - accuracy: 0.8114 - loss: 0.6518\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.6640893220901489, 0.8064516186714172]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_model.evaluate(test_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3620a62b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = 'clothing-dataset-small/test\\pants/7447eb77-7509-4d30-ab41-0087749e05bd.jpg'\n",
+    "img = load_img(path, target_size=(150,150))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "be21560e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 960ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ -2.7595143 ,  -3.0978448 ,   0.88183665,  -0.7059216 ,\n",
+       "        11.121766  ,  -5.3687253 ,  -2.1749046 ,   0.37023547,\n",
+       "       -10.707071  ,  -1.4070616 ], dtype=float32)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array(img)\n",
+    "X = np.array([x])\n",
+    "X = preprocess_input(X)\n",
+    "\n",
+    "pred = final_model.predict(X)\n",
+    "pred[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "79ac1af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(4)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred[0].argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "694cdb95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pants'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels = {\n",
+    "    0: 'dress',\n",
+    "    1: 'hat',\n",
+    "    2: 'longsleeve',\n",
+    "    3: 'outwear',\n",
+    "    4: 'pants',\n",
+    "    5: 'shirt',\n",
+    "    6: 'shoes',\n",
+    "    7: 'shorts',\n",
+    "    8: 'skirt',\n",
+    "    9: 't-shirt',\n",
+    "}\n",
+    "\n",
+    "labels[pred[0].argmax()]"
    ]
   }
  ],
